Another overlap fix style.scss

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -1,5 +1,6 @@
 ---
 ---
+
 @import "{{ site.theme }}";
 
 body {
@@ -7,47 +8,13 @@ body {
   font-family: "Times New Roman", Times, serif;
   font-size: 12pt;
   color: #000000;
-  line-height: 1.6;
-  margin: 0;
-  padding: 0;
 }
 
-.wrapper {
-  max-width: 960px;
-  margin: 0 auto;
-  padding: 20px;
-  background-color: #F0EAE2;
-  border-left: 1px solid #CCCCCC;
-  border-right: 1px solid #CCCCCC;
-}
-
-header, section, footer {
-  background-color: #F0EAE2;
-}
-
-h1, h2, h3, h4, h5, h6 {
-  font-family: "Times New Roman", Times, serif;
-  border-bottom: 1px solid #000000;
-  padding-bottom: 5px;
-}
-
-a {
-  color: #0000FF;
-  text-decoration: none;
-  border-bottom: 1px dotted #0000FF;
-}
-
-a:hover {
-  text-decoration: none;
-  border-bottom: 1px solid #0000FF;
-}
-
-code, pre {
-  font-family: Consolas, monospace;
-  background-color: #FFFFFF;
-  border: 1px solid #CCCCCC;
-  padding: 2px 4px;
-  font-size: 0.9em;
+header {
+  width: 270px;
+  float: left;
+  position: fixed;
+  -webkit-font-smoothing: subpixel-antialiased;
 }
 
 .ascii-divider {
@@ -65,27 +32,93 @@ code, pre {
   margin: 10px 0;
 }
 
-.container {
-  display: flex;
-  flex-wrap: wrap;
+a {
+  color: #0000FF;
+  text-decoration: none;
+  border-bottom: 1px dotted #0000FF;
 }
 
-.sidebar {
-  flex: 1;
-  padding-right: 20px;
-  min-width: 200px;
+a:hover {
+  text-decoration: none;
+  border-bottom: 1px solid #0000FF;
 }
 
-.main-content {
-  flex: 2;
-  min-width: 300px;
+section {
+  width: 500px;
+  float: right;
+  padding-bottom: 50px;
 }
 
-@media screen and (max-width: 600px) {
-  .container {
-    flex-direction: column;
+@media print, screen and (max-width: 960px) {
+  div.wrapper {
+    width: auto;
+    margin: 0;
   }
-  .sidebar {
-    padding-right: 0;
+
+  header, section, footer {
+    float: none;
+    position: static;
+    width: auto;
+  }
+
+  header {
+    padding-right: 320px;
+  }
+
+  section {
+    border: 1px solid #e5e5e5;
+    border-width: 1px 0;
+    padding: 20px 0;
+    margin: 0 0 20px;
+  }
+
+  header a small {
+    display: inline;
+  }
+
+  header ul {
+    position: absolute;
+    right: 50px;
+    top: 52px;
+  }
+}
+
+@media print, screen and (max-width: 720px) {
+  body {
+    word-wrap: break-word;
+  }
+
+  header {
+    padding: 0;
+  }
+
+  header ul, header p.view {
+    position: static;
+  }
+
+  pre, code {
+    word-wrap: normal;
+  }
+}
+
+@media print, screen and (max-width: 480px) {
+  body {
+    padding: 15px;
+  }
+
+  .downloads {
+    width: 99%;
+  }
+
+  .downloads li, .downloads li + li + li {
+    width: 33%;
+  }
+}
+
+@media print {
+  body {
+    padding: 0.4in;
+    font-size: 12pt;
+    color: #444;
   }
 }
